finished evaluating vanilla RNN

--- a/Models/Vanilla_RNN_with_test.ipynb
+++ b/Models/Vanilla_RNN_with_test.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +188,14 @@
     "n_inputs = x_train.shape[-1]\n",
     "n_neurons = 300  # cell.state_size\n",
     "n_outputs = 1\n",
-    "n_layers = 3\n",
+    "n_layers = 5\n",
     "learning_rate = 0.0001\n",
     "batch_size = 50\n",
     "n_epochs = 200 \n",
     "train_set_size = x_train.shape[0]\n",
     "test_set_size = x_test.shape[0]\n",
     "keep_prob = 0.85\n",
+    "max_gradient_norm = 2\n",
     "\n",
     "tf.reset_default_graph()\n",
     "\n",
@@ -229,13 +230,17 @@
     "outputs = tf.reshape(stacked_outputs, [-1, n_steps, n_outputs])\n",
     "outputs = outputs[:,n_steps-1,:] # keep only last output of sequence\n",
     "\n",
-    "outputs = tf.nn.dropout(outputs, keep_prob)\n",
-    "\n",
     "loss = tf.reduce_mean(tf.square(tf.div(outputs,y) - 1)) # loss function = mean squared error \n",
     "# loss = tf.reduce_mean(tf.square(outputs - y)) # loss function = mean squared error \n",
     "#loss = tf.reduce_mean(tf.abs(y-outputs)*2/(tf.abs(y)+tf.abs(outputs))) # SMAPE\n",
+    "params = tf.trainable_variables()\n",
+    "gradients = tf.gradients(loss, params)\n",
+    "gradient_norm = tf.global_norm(gradients)\n",
+    "clipped_gradients, _ = tf.clip_by_global_norm(gradients, max_gradient_norm)\n",
+    "param_norm = tf.global_norm(params)\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate) \n",
-    "training_op = optimizer.minimize(loss)\n",
+    "# training_op = optimizer.minimize(loss)\n",
+    "training_op = optimizer.apply_gradients(zip(clipped_gradients, params))\n",
     "\n",
     "# initialize parameters\n",
     "sess = tf.Session()\n",
@@ -245,44 +250,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is not saved parameters. Creating model with fresh parameters.\n",
-      "200.00 epochs: SMAPE train/valid = 0.344858/0.459913\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-1640\n",
-      "400.00 epochs: SMAPE train/valid = 0.349585/0.434379\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-3280\n",
-      "600.00 epochs: SMAPE train/valid = 0.324099/0.425116\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-4920\n",
-      "800.00 epochs: SMAPE train/valid = 0.353337/0.488613\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-6560\n",
-      "1000.00 epochs: SMAPE train/valid = 0.337278/0.442181\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-8200\n",
-      "1200.00 epochs: SMAPE train/valid = 0.321395/0.442851\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-9840\n",
-      "1400.00 epochs: SMAPE train/valid = 0.344118/0.412544\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-11480\n",
-      "1600.00 epochs: SMAPE train/valid = 0.335840/0.374878\n",
+      "INFO:tensorflow:Restoring parameters from VanillaRnn/model.ckpt-12300\n",
+      "Start from iteration: 12300\n",
+      "1600.00 epochs: loss = 0.00239, param_norm = 45.783, gradient_norm = 0.357, SMAPE train/valid = 0.037139/0.241887\n",
       "Saved parameters to ./VanillaRnn/model.ckpt-13120\n",
-      "1800.00 epochs: SMAPE train/valid = 0.365685/0.496425\n",
+      "1800.00 epochs: loss = 0.00190, param_norm = 46.015, gradient_norm = 0.098, SMAPE train/valid = 0.043888/0.280135\n",
       "Saved parameters to ./VanillaRnn/model.ckpt-14760\n",
-      "2000.00 epochs: SMAPE train/valid = 0.310127/0.469298\n",
+      "2000.00 epochs: loss = 0.00208, param_norm = 46.230, gradient_norm = 0.224, SMAPE train/valid = 0.035643/0.244870\n",
       "Saved parameters to ./VanillaRnn/model.ckpt-16400\n",
-      "2200.00 epochs: SMAPE train/valid = 0.301518/0.483728\n",
+      "2200.00 epochs: loss = 0.00179, param_norm = 46.411, gradient_norm = 0.190, SMAPE train/valid = 0.036540/0.264385\n",
       "Saved parameters to ./VanillaRnn/model.ckpt-18040\n",
-      "2400.00 epochs: SMAPE train/valid = 0.329500/0.624672\n",
+      "2400.00 epochs: loss = 0.00231, param_norm = 46.586, gradient_norm = 0.298, SMAPE train/valid = 0.031591/0.283563\n",
       "Saved parameters to ./VanillaRnn/model.ckpt-19680\n",
-      "2600.00 epochs: SMAPE train/valid = 0.271079/0.486337\n",
+      "2600.00 epochs: loss = 0.00154, param_norm = 46.750, gradient_norm = 0.118, SMAPE train/valid = 0.037856/0.270871\n",
       "Saved parameters to ./VanillaRnn/model.ckpt-21320\n",
-      "2800.00 epochs: SMAPE train/valid = 0.355965/0.560721\n",
+      "2800.00 epochs: loss = 0.00254, param_norm = 46.910, gradient_norm = 0.195, SMAPE train/valid = 0.033400/0.358892\n",
       "Saved parameters to ./VanillaRnn/model.ckpt-22960\n",
-      "3000.00 epochs: SMAPE train/valid = 0.322439/0.521052\n",
-      "Saved parameters to ./VanillaRnn/model.ckpt-24600\n"
+      "3000.00 epochs: loss = 0.00177, param_norm = 47.046, gradient_norm = 0.244, SMAPE train/valid = 0.036136/0.308685\n",
+      "Saved parameters to ./VanillaRnn/model.ckpt-24600\n",
+      "3200.00 epochs: loss = 0.00149, param_norm = 47.182, gradient_norm = 0.147, SMAPE train/valid = 0.031663/0.329533\n",
+      "Saved parameters to ./VanillaRnn/model.ckpt-26240\n",
+      "3400.00 epochs: loss = 0.00165, param_norm = 47.319, gradient_norm = 0.299, SMAPE train/valid = 0.036579/0.325704\n",
+      "Saved parameters to ./VanillaRnn/model.ckpt-27880\n",
+      "3600.00 epochs: loss = 0.00122, param_norm = 47.458, gradient_norm = 0.059, SMAPE train/valid = 0.033981/0.330773\n",
+      "Saved parameters to ./VanillaRnn/model.ckpt-29520\n",
+      "3800.00 epochs: loss = 0.00157, param_norm = 47.594, gradient_norm = 0.066, SMAPE train/valid = 0.033249/0.327089\n",
+      "Saved parameters to ./VanillaRnn/model.ckpt-31160\n",
+      "4000.00 epochs: loss = 0.00162, param_norm = 47.726, gradient_norm = 0.089, SMAPE train/valid = 0.030119/0.336046\n",
+      "Saved parameters to ./VanillaRnn/model.ckpt-32800\n",
+      "4200.00 epochs: loss = 0.00185, param_norm = 47.861, gradient_norm = 0.271, SMAPE train/valid = 0.031952/0.330092\n",
+      "Saved parameters to ./VanillaRnn/model.ckpt-34440\n"
      ]
     },
     {
@@ -292,7 +296,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-b7ee747eb3a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0miteration\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miteration\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mx_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_next_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# fetch the next training batch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_op\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0miteration\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtrain_set_size\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m#             loss_train = loss.eval(feed_dict={X: x_train, y: y_train})\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-21-0136ec87d65e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;31m# output_feed contains the things we want to fetch.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0moutput_feed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtraining_op\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_norm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient_norm\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;34m[\u001b[0m\u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_norm_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient_norm_val\u001b[0m\u001b[0;34m]\u001b[0m         \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_feed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0miteration\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtrain_set_size\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    903\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    904\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 905\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    906\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    907\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1138\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1139\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m-> 1140\u001b[0;31m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[1;32m   1141\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1142\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1319\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1320\u001b[0m       return self._do_call(_run_fn, feeds, fetches, targets, options,\n\u001b[0;32m-> 1321\u001b[0;31m                            run_metadata)\n\u001b[0m\u001b[1;32m   1322\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1323\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_prun_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeeds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -322,14 +326,20 @@
     "while True:\n",
     "    iteration = iteration + 1\n",
     "    x_batch, y_batch = get_next_batch(batch_size) # fetch the next training batch \n",
-    "    sess.run(training_op, feed_dict={X: x_batch, y: y_batch}) \n",
+    "     \n",
+    "    # output_feed contains the things we want to fetch.\n",
+    "    output_feed = [training_op, loss, param_norm, gradient_norm]\n",
+    "    [_, loss_val, param_norm_val, gradient_norm_val] \\\n",
+    "        = sess.run(output_feed, feed_dict={X: x_batch, y: y_batch})\n",
+    "    \n",
     "    if iteration % int(200*train_set_size/batch_size) == 0:\n",
     "#             loss_train = loss.eval(feed_dict={X: x_train, y: y_train}) \n",
     "#             loss_valid = loss.eval(feed_dict={X: x_valid, y: y_valid}) \n",
     "        y_train_pred = sess.run(outputs, feed_dict={X: x_train})\n",
     "        y_valid_pred = sess.run(outputs, feed_dict={X: x_valid})\n",
-    "        print('%.2f epochs: SMAPE train/valid = %.6f/%.6f' \\\n",
-    "              %(iteration*batch_size/train_set_size,\\\n",
+    "        print('%.2f epochs: loss = %.5f, param_norm = %.3f, gradient_norm = %.3f, SMAPE train/valid = %.6f/%.6f' \\\n",
+    "              %(iteration*batch_size/train_set_size, loss_val, param_norm_val, \n",
+    "                gradient_norm_val, \\\n",
     "                SMAPE(y_train, y_train_pred), \\\n",
     "                SMAPE(y_valid, y_valid_pred)))\n",
     "#             print('%.2f epochs: loss train/valid = %.6f/%.6f'%(\n",
