--- a/Models/LSTM.ipynb
+++ b/Models/LSTM.ipynb
@@ -192,7 +192,7 @@
     "X = tf.placeholder(tf.float32, [None, n_steps, n_inputs])\n",
     "y = tf.placeholder(tf.float32, [None, n_outputs])\n",
     "\n",
-    "# use Basic RNN Cell\n",
+    "# use LSTM Cell\n",
     "layers = [tf.contrib.rnn.LSTMCell(num_units=n_neurons, \\\n",
     "                                  initializer=tf.contrib.layers.xavier_initializer(), \\\n",
     "                                  activation=tf.nn.elu)\n",
