updated LSTM, using relative error

--- a/Models/LSTM.ipynb
+++ b/Models/LSTM.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shared/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n",
+      "/home/shared/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -267,7 +277,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +292,7 @@
     "from sklearn import preprocessing\n",
     "import tensorflow as tf\n",
     "\n",
-    "dir_path = 'Data/Poloniex/'\n",
+    "dir_path = ''\n",
     "df = pd.read_pickle(dir_path+'df_5min.pkl')\n",
     "df = df.dropna()\n",
     "\n",
@@ -291,17 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler_price = preprocessing.MinMaxScaler(feature_range=(0, 1))\n",
-    "scaler_features = preprocessing.MinMaxScaler(feature_range=(0, 1))"
+    "scaler_price = preprocessing.MinMaxScaler(feature_range=(0.1, 1))\n",
+    "scaler_features = preprocessing.MinMaxScaler(feature_range=(0.1, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,17 +488,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/shared/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the retry module or similar alternatives.\n"
+     ]
+    }
+   ],
    "source": [
     "# parameters\n",
     "n_steps = seq_len-1 \n",
     "n_inputs = x_train.shape[-1]\n",
-    "n_neurons = 200  # cell.state_size\n",
+    "n_neurons = 300  # cell.state_size\n",
     "n_outputs = 1\n",
     "n_layers = 2\n",
-    "learning_rate = 1e-5\n",
+    "learning_rate = 1e-4\n",
     "batch_size = 100\n",
     "n_epochs = 200 \n",
     "train_set_size = x_train.shape[0]\n",
@@ -531,7 +551,7 @@
     "outputs = tf.reshape(stacked_outputs, [-1, n_steps, n_outputs])\n",
     "outputs = outputs[:,n_steps-1,:] # keep only last output of sequence\n",
     "\n",
-    "loss = tf.reduce_mean(tf.square(outputs - y)) # loss function = mean squared error \n",
+    "loss = tf.reduce_mean(tf.square(tf.div(outputs,y)-1)) # loss function = mean squared error \n",
     "# loss = tf.reduce_mean(tf.square(outputs - y)) # loss function = mean squared error \n",
     "#loss = tf.reduce_mean(tf.abs(y-outputs)*2/(tf.abs(y)+tf.abs(outputs))) # SMAPE\n",
     "params = tf.trainable_variables()\n",
@@ -552,11 +572,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_name = 'overfit_5min_LSTM_1_features_5seq_200neuron_2layer' # type your experiment name here before running the code below"
+    "experiment_name = 'overfit_5min_LSTM_1_features_5seq_300neuron_2layer' # type your experiment name here before running the code below"
    ]
   },
   {
@@ -569,12 +589,45 @@
      "output_type": "stream",
      "text": [
       "There is not saved parameters. Creating model with fresh parameters.\n",
-      "0.28 epochs, iter 500: train_loss = 0.009132721, param_norm = 29.302, train_SMAPE/valid_SMAPE = 0.722335/0.748914\n",
-      "0.56 epochs, iter 1000: train_loss = 0.001114755, param_norm = 29.354, train_SMAPE/valid_SMAPE = 0.350015/0.312816\n",
-      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_200neuron_2layer/model.ckpt-1000\n",
-      "0.83 epochs, iter 1500: train_loss = 0.000006754, param_norm = 29.380, train_SMAPE/valid_SMAPE = 0.025525/0.022908\n",
-      "1.11 epochs, iter 2000: train_loss = 0.000006587, param_norm = 29.380, train_SMAPE/valid_SMAPE = 0.027755/0.023522\n",
-      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_200neuron_2layer/model.ckpt-2000\n"
+      "0.28 epochs, iter 500: train_loss = 0.000809108, param_norm = 35.884, train_SMAPE/valid_SMAPE = 0.091670/0.069795\n",
+      "0.56 epochs, iter 1000: train_loss = 0.000459015, param_norm = 35.888, train_SMAPE/valid_SMAPE = 0.068833/0.052310\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-1000\n",
+      "0.83 epochs, iter 1500: train_loss = 0.000331958, param_norm = 35.891, train_SMAPE/valid_SMAPE = 0.058269/0.043841\n",
+      "1.11 epochs, iter 2000: train_loss = 0.000519974, param_norm = 35.895, train_SMAPE/valid_SMAPE = 0.073975/0.053701\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-2000\n",
+      "1.39 epochs, iter 2500: train_loss = 0.000377285, param_norm = 35.899, train_SMAPE/valid_SMAPE = 0.063473/0.046101\n",
+      "1.67 epochs, iter 3000: train_loss = 0.000389563, param_norm = 35.903, train_SMAPE/valid_SMAPE = 0.063737/0.046047\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-3000\n",
+      "1.94 epochs, iter 3500: train_loss = 0.000269377, param_norm = 35.906, train_SMAPE/valid_SMAPE = 0.053626/0.038880\n",
+      "2.22 epochs, iter 4000: train_loss = 0.000355276, param_norm = 35.910, train_SMAPE/valid_SMAPE = 0.060687/0.044806\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-4000\n",
+      "2.50 epochs, iter 4500: train_loss = 0.000494402, param_norm = 35.914, train_SMAPE/valid_SMAPE = 0.071995/0.053026\n",
+      "2.78 epochs, iter 5000: train_loss = 0.000375006, param_norm = 35.917, train_SMAPE/valid_SMAPE = 0.062178/0.046958\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-5000\n",
+      "3.05 epochs, iter 5500: train_loss = 0.000448704, param_norm = 35.920, train_SMAPE/valid_SMAPE = 0.069757/0.050871\n",
+      "3.33 epochs, iter 6000: train_loss = 0.000211481, param_norm = 35.924, train_SMAPE/valid_SMAPE = 0.047249/0.036056\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-6000\n",
+      "3.61 epochs, iter 6500: train_loss = 0.000297580, param_norm = 35.927, train_SMAPE/valid_SMAPE = 0.056650/0.042587\n",
+      "3.89 epochs, iter 7000: train_loss = 0.000272178, param_norm = 35.930, train_SMAPE/valid_SMAPE = 0.053098/0.041195\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-7000\n",
+      "4.16 epochs, iter 7500: train_loss = 0.000288407, param_norm = 35.932, train_SMAPE/valid_SMAPE = 0.055904/0.042175\n",
+      "4.44 epochs, iter 8000: train_loss = 0.000258354, param_norm = 35.935, train_SMAPE/valid_SMAPE = 0.052042/0.040388\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-8000\n",
+      "4.72 epochs, iter 8500: train_loss = 0.000310382, param_norm = 35.938, train_SMAPE/valid_SMAPE = 0.058668/0.043405\n",
+      "5.00 epochs, iter 9000: train_loss = 0.000248212, param_norm = 35.940, train_SMAPE/valid_SMAPE = 0.052307/0.039301\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-9000\n",
+      "5.27 epochs, iter 9500: train_loss = 0.000377815, param_norm = 35.943, train_SMAPE/valid_SMAPE = 0.062969/0.048551\n",
+      "5.55 epochs, iter 10000: train_loss = 0.000340961, param_norm = 35.945, train_SMAPE/valid_SMAPE = 0.061094/0.045773\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-10000\n",
+      "5.83 epochs, iter 10500: train_loss = 0.000305504, param_norm = 35.948, train_SMAPE/valid_SMAPE = 0.057030/0.043823\n",
+      "6.11 epochs, iter 11000: train_loss = 0.000141280, param_norm = 35.950, train_SMAPE/valid_SMAPE = 0.039733/0.030095\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-11000\n",
+      "6.39 epochs, iter 11500: train_loss = 0.000288610, param_norm = 35.953, train_SMAPE/valid_SMAPE = 0.056138/0.042422\n",
+      "6.66 epochs, iter 12000: train_loss = 0.000165744, param_norm = 35.955, train_SMAPE/valid_SMAPE = 0.042760/0.032618\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-12000\n",
+      "6.94 epochs, iter 12500: train_loss = 0.000262865, param_norm = 35.958, train_SMAPE/valid_SMAPE = 0.053431/0.040670\n",
+      "7.22 epochs, iter 13000: train_loss = 0.000172465, param_norm = 35.961, train_SMAPE/valid_SMAPE = 0.042685/0.033439\n",
+      "Saved parameters to ./overfit_5min_LSTM_1_features_5seq_300neuron_2layer/model.ckpt-13000\n"
      ]
     }
    ],
@@ -625,15 +678,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0035990980811872056\n",
-      "0.0033744221471834375\n"
+      "0.0045600566389654\n",
+      "0.00566148485662456\n"
      ]
     }
    ],
@@ -665,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
